bugfix: month title had large padding at top and half of text was invisible, closes webgui issue #92

--- a/src/style/flatpickr.styl
+++ b/src/style/flatpickr.styl
@@ -302,7 +302,7 @@
   position absolute
   width 75%
   left 12.5%
-  padding (0.22*$monthNavHeight) 0 0 0
+  padding (0.05*$monthNavHeight) 0 0 0
   line-height 1
   height $monthNavHeight
   display inline-block
